--- a/src/app/bmx/bmx.component.html
+++ b/src/app/bmx/bmx.component.html
@@ -11,17 +11,14 @@
             this internal survey!</div>
 
         <div class="slideToLoginBoundary">
-            <button  mat-icon-button class="GO"
-             cdkDragBoundary=".slideToLoginBoundary" cdkDragLockAxis="x" cdkDrag>
+            <button mat-icon-button class="GO" cdkDragBoundary=".slideToLoginBoundary" cdkDragLockAxis="x" cdkDrag>
                 BI
             </button>
             <!-- <mat-icon style="color: darkblue;">crop_16_9</mat-icon> -->
             <input class="slideInput disable-text-selection" type="text" mat-input value="Slide to login" disabled>
         </div>
 
-        <div
-            style="font-size: 20px;font-family: Quicksand_Book; color: black;border: darkblue dotted 1px;width: 200px;">
-            help?</div>
+        <div class="help">help?</div>
     </div>
 
     <!-- TABLE OF CONTENT  -->
