--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -23,7 +23,7 @@
 
 
         <!-- LEFT & RIGHT ICONS -->
-        <button (click)="moveLeft()" class="menu-left-icon" mat-icon-button>
+        <button (click)="moveLeft1()" class="menu-left-icon" mat-icon-button>
             <mat-icon>keyboard_arrow_right</mat-icon>
         </button>
 
@@ -136,7 +136,6 @@
         <!-- IMAGE VIEW  -->
 
         <div *ngIf="(slideType === 'Image')" class="imagePresentar" [style.background]="slideBackground"></div>
-
 
     </div>
 
