commiting to pul

--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -135,8 +135,8 @@
 
         <!-- IMAGE VIEW  -->
 
-        <div *ngIf="(slideType === 'Image')" class="imagePresentar" [style.background]="slideBackground"></div>
-
+        <div  *ngIf="slideType === 'Image'" class="imagePresentar" [style.background]="slideBackground"></div>
+{{slideType}}
 
     </div>
 
