refactoring code 5 days

--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -23,11 +23,11 @@
 
 
         <!-- LEFT & RIGHT ICONS -->
-        <button (click)="changes()" class="menu-left-icon" mat-icon-button>
+        <button (click)="moveRight()" class="menu-left-icon" mat-icon-button>
             <mat-icon>keyboard_arrow_right</mat-icon>
         </button>
 
-        <button (click)="changes()" class="menu-right-icon" mat-icon-button>
+        <button (click)="moveLeft1()" class="menu-right-icon" mat-icon-button>
             <mat-icon>keyboard_arrow_left</mat-icon>
         </button>
 
