refactoring code 6  days

--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -137,7 +137,7 @@
 
 
         <div *ngIf="(slideType === 'Image')" class="imagePresentar" [style.background]="slideBackground"></div>
-
+        {{slideBackground}}
     </div>
 
 
