--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -40,8 +40,8 @@
 
                 <div class="nameContainer">
                     <div [style.font-family]="font1" [style.font-size]="'30px'" class="item1">COVID-9 mRNA vaccine</div>
-                    <div class="testName" [style.font-family]="font2"
-                        [style.font-size]="(font2==='Gacor')?'117px':'190px'" [innerHTML]="'Comirnaty'">
+                    <div class="testName" [style.font-family]="font2"Comirnaty
+                        [style.font-size]="(font2==='Gacor')?'117px':'190px'" [innerHTML]="testName">
 
                     </div>
                     <div [style.font-family]="font3" [style.font-size]="'30px'" class="pronounciation">comir-nati</div>
