changing to BSR

--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -41,7 +41,7 @@
                 <div class="nameContainer">
                     <div [style.font-family]="font1" [style.font-size]="'30px'" class="item1">COVID-9 mRNA vaccine</div>
                     <div class="testName" [style.font-family]="font2"Comirnaty
-                        [style.font-size]="(font2==='Gacor')?'117px':'190px'" [innerHTML]="testName">
+                        [style.font-size]="(font2==='coture')?'117px':'190px'" [innerHTML]="testName">
 
                     </div>
                     <div [style.font-family]="font3" [style.font-size]="'30px'" class="pronounciation">comir-nati</div>
@@ -137,7 +137,7 @@
 
 
         <div *ngIf="(slideType === 'Image')" class="imagePresentar" [style.background]="slideBackground"></div>
-        {{slideBackground}}
+        <!-- {{slideBackground}} -->
     </div>
 
 
