--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -119,7 +119,7 @@
     background: white;
     border-radius: 5px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     
 }
 
